--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "http://asadeg02.github.io/BWHS-questionnaire-lookup",
   "name": "bwhs-questionnaire-lookup",
   "version": "0.1.0",
   "private": true,
